eulogy-derive/tests/ui/enum_after_cross_variant.stderr
error: no field `a` in variant `Baz`
  --> tests/ui/enum_after_cross_variant.rs:13:27
   |
13 |         #[eulogy(after = [a])]
   |                           ^
